--- a/site/_components/case-studies.njk
+++ b/site/_components/case-studies.njk
@@ -9,7 +9,7 @@
   @param {object} content.cta (optional): A CTA object containing the following required attributes.
   @param {string} content.cta.text: Text to be displayed within the CTA.
   @param {string} content.cta.url: href value for the CTA.
-  @param {object[]} studies: Array of 3 case studies.
+  @param {object[]} studies: Array of case studies.
 
   @param {string} locale: Code for the current locale, required when content.cta is present.
 #}-->
