--- a/site/_components/header.njk
+++ b/site/_components/header.njk
@@ -13,7 +13,7 @@
   <div class="header__container">
     <button class="header__menu" aria-expanded="false" aria-haspopup="true" aria-label="Menu">{{ icon('menu', 'header__menu-icon')}}</button>
     <a href="/{{locale.code}}" class="header__home">{% include 'logo.njk' %}</a>
-    {{ navigation(nav, locale) }} {{searchBox(searchPlaceholder,locale.code, {background: 'search-box__white', headerClass:'search-box-header'})}}
+    {{ navigation(nav, locale, cta) }} {{searchBox(searchPlaceholder,locale.code, {background: 'search-box__white', headerClass:'search-box-header'})}}
     <a class="header__cta cta cta--high" href="{{cta.url}}">{{cta.text}}</a>
   </div>
 </header>
