--- a/site/sass/components/_nav.scss
+++ b/site/sass/components/_nav.scss
@@ -36,23 +36,6 @@
     }
   }
 
-  &[aria-expanded='true'] {
-    $bkg: var(--grey-900);
-    background: $bkg;
-    transform: translateX(0%);
-    transition: background-color $transition-space;
-    z-index: 50;
-
-    @media (prefers-reduced-motion: reduce) {
-      transition: none;
-    }
-
-    .nav__header,
-    .nav__primary {
-      transform: translateX(0);
-    }
-  }
-
   &__link {
     background: unset;
     border: unset;
@@ -148,14 +131,13 @@
     }
   }
 
-  /* stylelint-disable-next-line  no-descending-specificity */
   &__primary {
     list-style: none;
     margin: unset;
 
     @include maxLangMQ($bkpt-map--header--large) {
       background: var(--white);
-      height: 100vh;
+      flex-grow: 1;
       max-width: 40ch;
       overflow-x: auto;
       padding-top: 0.875em;
@@ -182,7 +164,6 @@
     padding: 0;
   }
 
-  /* stylelint-disable-next-line  no-descending-specificity */
   &__header {
     background: var(--white);
     border-bottom: 1px solid var(--grey-300);
@@ -197,6 +178,21 @@
 
     @include minLangMQ($bkpt-map--header--large) {
       display: none;
+    }
+  }
+
+  &__footer {
+    max-width: 40ch;
+    transform: translateX(-100%);
+    transition: var(--nav-transition);
+    width: calc(100% - 5em);
+
+    @include minLangMQ($bkpt-map--header--large) {
+      display: none;
+    }
+
+    &-cta {
+      border-radius: 0;
     }
   }
 
@@ -249,6 +245,26 @@
       &:not(:first-of-type) {
         margin-left: 1.5rem;
       }
+    }
+  }
+
+  &[aria-expanded='true'] {
+    $bkg: var(--grey-900);
+    background: $bkg;
+    display: flex;
+    flex-direction: column;
+    transform: translateX(0%);
+    transition: background-color $transition-space;
+    z-index: 50;
+
+    @media (prefers-reduced-motion: reduce) {
+      transition: none;
+    }
+
+    .nav__header,
+    .nav__primary,
+    .nav__footer {
+      transform: translateX(0);
     }
   }
 }
