update jsdoc, fix decorators

--- a/site/_components/community-quotes.njk
+++ b/site/_components/community-quotes.njk
@@ -1,9 +1,9 @@
 <!--{#
-  Renders a quote bubble with quote.
+  Renders a flexible grid of quote figures.
 
   @param {object} content - An object with the following attributes.
   @param {string} content.title - Section heading
-  @param {string} content.subtitle (optional) - Section subtitle, displayed only when a heading is also included.
+  @param {string} content.subtitle (optional) - Section subtitle, displayed only when a title is also included.
 
   @param {object[]} quotes - An array of quote objects with the following attributes.
   @param {string} quotes[].copy: The body content of the quote.
