--- a/site/_components/item-grid.njk
+++ b/site/_components/item-grid.njk
@@ -18,7 +18,7 @@
     @param {string} defaultText: Default text used when 'modifiers.variant' is 'icon'.
  #}-->
 {% from 'external-community.njk' import externalCommunity %} {% from 'card-subnav.njk' import cardSubnav %} {% from 'icon-card.njk' import iconCard %} {% from 'card.njk' import card %} {% from 'video-card.njk' import videoCard %}{% macro itemGrid(title, items, modifiers, locale, defaultText) %} {% if items.length > 0 %}
-<section class="item-grid {{modifiers.custom}} {{'item-grid--icon-card' if modifiers.variant == 'icon'}} {{ 'item-grid--subnav' if modifiers.variant == 'subnav' }} {{'item-grid--community' if modifiers.variant == 'community'}} {{'item-grid--circled' if modifiers.shapeOn }}">
+<section class="item-grid {{modifiers.custom}} {{'item-grid--icon-card' if modifiers.variant == 'icon'}} {{ 'item-grid--subnav' if modifiers.variant == 'subnav' }} {{'item-grid--community' if modifiers.variant == 'community'}} {{'item-grid--video' if modifiers.variant == 'video'}} {{'item-grid--circled' if modifiers.shapeOn }}">
   <h3 class="item-grid__title {% if modifiers.heading %} type--{{modifiers.heading}} {% else %} type--h1 {% endif %}">{{title}}</h3>
   {% if modifiers.subtitle %}
   <p class="type--large item-grid__subtitle">{{modifiers.subtitle}}</p>
