--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -83,6 +83,7 @@
 @import 'components/pagination';
 @import 'components/page-not-found';
 @import 'components/pwa-checklist';
+@import 'components/card-routing';
 
 // Page Layouts
 @import 'layouts/tech-detail';
