--- a/site/sass/components/_subnav.scss
+++ b/site/sass/components/_subnav.scss
@@ -1,7 +1,7 @@
 // Styling for Subnav component
 .subnav {
   @include expandingNav($bkpt-tech-details--2-cols, 'subnav', 1.75rem, 2.5rem);
-  background-color: var(--blue-50);
+  background-color: var(--white);
   overflow: hidden;
   padding: 0 0.75rem;
 
@@ -19,6 +19,15 @@
 
     @include mq($bkpt-tech-details--2-cols) {
       background-color: unset;
+    }
+  }
+
+  &__link {
+    &[data-active] {
+      &::after {
+        border-left: 0;
+        border-radius: 0 20px 20px 0;
+      }
     }
   }
 }
