--- a/site/sass/components/_search-box.scss
+++ b/site/sass/components/_search-box.scss
@@ -26,9 +26,7 @@
 
     &:hover,
     &:focus {
-      background-clip: content-box;
-      background-color: var(--grey-300);
-      border-radius: 50%;
+      fill: var(--blue-700);
     }
   }
 
@@ -74,7 +72,7 @@
       cursor: default;
 
       &:hover {
-        background: none;
+        fill: unset;
       }
     }
   }
