--- a/site/_components/item-grid.njk
+++ b/site/_components/item-grid.njk
@@ -1,8 +1,10 @@
 <!--{#
   Renders a section with items.
+
   Arguments:
     @param {string} title: Section title.
     @param {string} items: List of item objects.
+
     @param {object} modifiers (optional): Object with modifier styles for the grid.
     @param {string} modifiers.custom: Custom modifier styles for the grid.
     @param {number} modifiers.shapeOn: Index of the nth item of the grid that will have a shape in the background.
@@ -11,11 +13,8 @@
     @param {string} modifiers.heading (optional): Designate the section heading typography class. Defaults to h1 treatment.
     @param {string} modifiers.subtitle (optional): Text for a subtitle beneath the primary title.
 
-    @param {object} modifiers.cta: An object with the following attributes. Locale is required when a cta is provided.
-    @param {string} modifiers.cta.url: Non-locale-prefixed path to an internal page.
-    @param {string} modifiers.cta.text: Text for the cta.
+    @param {string} locale: Code for the current locale, used when 'modifiers.variant' is 'subnav'
 
-    @param {string} locale: Code for the current locale, used when 'modifiers.variant' is 'subnav' or when 'modifiers.cta' is used.
     @param {string} defaultText: Default text used when 'modifiers.variant' is 'icon'.
  #}-->
 {% from 'external-community.njk' import externalCommunity %} {% from 'card-subnav.njk' import cardSubnav %} {% from 'icon-card.njk' import iconCard %} {% from 'card.njk' import card %} {% macro itemGrid(title, items, modifiers, locale, defaultText) %} {% if items.length > 0 %}
@@ -25,9 +24,9 @@
   <p class="type--large item-grid__subtitle">{{modifiers.subtitle}}</p>
   {% endif %}
   <div class="item-grid__content">{% for item in items %} {% if modifiers.variant == 'icon' %} {{iconCard(item, defaultText)}} {% elif modifiers.variant == 'subnav' %} {% if item.icon and item.desc %} {{cardSubnav(item, locale)}} {% endif %} {% elif modifiers.variant == 'community' %} {{externalCommunity(item.logo, item.topic, item.cta)}} {% else %} {{ card(item) }} {% endif %} {% endfor %}</div>
-  {% if modifiers.cta %} {% set localeCta = { 'url': '/' ~ locale.code ~ '/' ~ modifiers.cta.url, 'text': modifiers.cta.text }%}
+  {% if modifiers.cta %}
   <footer class="item-grid__footer">
-    <a class="cta cta--medium" href="{{localeCta.url}}">{{localeCta.text}}</a>
+    <a class="cta cta--medium" href="{{modifiers.cta.url}}">{{modifiers.cta.text}}</a>
   </footer>
   {% endif %}
 </section>
