--- a/site/sass/components/_subnav.scss
+++ b/site/sass/components/_subnav.scss
@@ -1,8 +1,8 @@
 // Styling for Subnav component
 .subnav {
   @include expandingNav($bkpt-tech-details--2-cols, 'subnav', 1.75rem, 2.5rem);
+  background-color: var(--white);
   overflow: hidden;
-  padding: 0 0.75rem;
 
   @include mq($bkpt-tech-details--2-cols) {
     padding: 0 2.5rem;
@@ -10,6 +10,23 @@
 
     &[open] {
       padding-bottom: 2.5rem;
+    }
+  }
+
+  &__summary {
+    background-color: var(--blue-50);
+
+    @include mq($bkpt-tech-details--2-cols) {
+      background-color: unset;
+    }
+  }
+
+  &__link {
+    &[data-active] {
+      &::after {
+        border-left: 0;
+        border-radius: 0 1.25rem 1.25rem 0;
+      }
     }
   }
 }
