--- a/site/_layouts/_wrapper.njk
+++ b/site/_layouts/_wrapper.njk
@@ -27,7 +27,7 @@
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-168234575-1" type="module"></script>
   </head>
   <body id="body">
-    {% from 'header.njk' import header %} {{ header(nav, search.placeholder, locale) }}
+    {% from 'header.njk' import header %} {{ header(nav, search.placeholder, subscribe.cta, locale) }}
     <main class="main">
       {{ content | safe }} {% if showNewsletter and subscribe %}
       <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">{% from "call-out.njk" import callOut %} {{ callOut(subscribe.content, subscribe.cta) }}</div>
