--- a/site/sass/globals/extends/_cta.scss
+++ b/site/sass/globals/extends/_cta.scss
@@ -17,13 +17,29 @@
 
   &--left-icon {
     .icon {
-      margin-right: 0.5rem;
+      margin-inline-end: 0.5rem;
+
+      @supports not (margin-inline-end: 1rem) {
+        [dir='ltr'] & {
+          margin-right: 0.5rem;
+        }
+
+        [dir='rtl'] {
+          margin-left: 0.5rem;
+        }
+      }
     }
   }
 
   &--right-icon {
     .icon {
-      margin-left: 0.625rem;
+      [dir='ltr'] & {
+        margin-left: 0.625rem;
+      }
+
+      [dir='rtl'] & {
+        margin-right: 0.625rem;
+      }
     }
   }
 
