remove text-align start supports, add locale

--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -16,7 +16,7 @@ hideNewsletter: true
   <header id="home__hero" class="wrapper wrapper--full-bleed wrapper--no-bottom wrapper--no-top">{{ heroAnimated(l10n.home.hero.heading, l10n.home.hero.cta, l10n.home.hero.img) }}</header>
 
   <!-- Linux -->
-  <section id="home__linux" class="wrapper wrapper--padded wrapper--padding">{{ fiftyFifty(l10n.home.linux.content, l10n.home.linux.cta, l10n.home.linux.images) }}</section>
+  <section id="home__linux" class="wrapper wrapper--padded wrapper--padding">{{ fiftyFifty(l10n.home.linux.content, l10n.home.linux.cta, l10n.home.linux.images, l10n.locale.code) }}</section>
 
   <section id="home__stats" class="wrapper wrapper--full-bleed wrapper--no-top wrapper--no-bottom" aria-label="{{ l10n.home.results.desc }}">{{ cardStats(l10n.home.results.content, l10n.home.results.img, l10n.home.results.cta, l10n.home.results.stats, l10n.home.results.footnote) }}</section>
 
