--- a/site/_components/fifty-fifty.njk
+++ b/site/_components/fifty-fifty.njk
@@ -13,12 +13,15 @@
   @param {string} images[].src - Image source.
   @param {string} images[].alt - Image description.
 
+  @param {string} locale: Code for the current locale.
+
   @param {object} modifiers (optional) - An object containing the following attributes.
   @param {string} modifiers.class A custom class.
   @param {boolean} modifiers.flip - Invert the order of the image and text content.
 #}-->
-{% from 'icon.njk' import icon %} {% macro fiftyFifty(content, cta, images, modifiers) %}
+{% from 'icon.njk' import icon %} {% macro fiftyFifty(content, cta, images, locale, modifiers) %}
 <article class="fifty-fifty {{modifiers.class}} {{ 'fifty-fifty--flip' if modifiers.flip }}">
+  <!--{# Set imageWrapper to provided HTML #}-->
   {% set imageWrapper %}
   <div class="fifty-fifty__image-wrapper">
     {% for image in images %}
@@ -30,7 +33,7 @@
     <h3 class="type--h1">{{content.title | striptags(true) | escape | nl2br}}</h3>
     <p class="type--base fifty-fifty__copy">{{content.copy}}</p>
     {% if cta is defined %}
-    <a href="{{cta.url}}" class="cta cta--link fifty-fifty__cta">{{cta.text}}</a>
+    <a href="{% if locale is defined %}/{{locale}}/{% endif %}{{cta.url}}" class="cta cta--link fifty-fifty__cta">{{cta.text}}</a>
     {% endif %}
   </div>
   {% if not modifiers.flip %}{{ imageWrapper | safe }}{% endif %}
