--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -83,7 +83,7 @@
 @import 'components/pagination';
 @import 'components/page-not-found';
 @import 'components/pwa-checklist';
-
+@import 'components/fifty-fifty';
 // Page Layouts
 @import 'layouts/tech-detail';
 @import 'layouts/article';
